{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 37,
  "lineage": "d24c9ad8-8ddb-f483-370d-3d52db71e1d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "import",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:369963633942:instance/i-06fb2ec924bb69ba8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdf",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "fordev"
                },
                "tags_all": {
                  "Name": "fordev",
                  "terraforms": "true"
                },
                "throughput": 0,
                "volume_id": "vol-032cf930639202fda",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "forterraform",
            "id": "i-06fb2ec924bb69ba8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "forlinux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063c496ad4949b2c9",
            "private_dns": "ip-172-31-39-132.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.132",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:369963633942:key/1cff0d32-3418-4671-896b-a97b43ed7b38",
                "tags": {
                  "for": "terraform"
                },
                "tags_all": {
                  "for": "terraform"
                },
                "throughput": 125,
                "volume_id": "vol-0c60db20e4959dd66",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085270b27ecb44ebb",
            "tags": {
              "Name": "Terraform"
            },
            "tags_all": {
              "Name": "Terraform",
              "terraforms": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07680353ab334a868"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f58b397bc5c1f2e8",
            "arn": "arn:aws:ec2:ap-south-1:369963633942:instance/i-0774775f58383b663",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0774775f58383b663",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "forwindows",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a47582b15f6dcd9",
            "private_dns": "ip-172-31-2-115.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.115",
            "public_dns": "ec2-13-233-104-71.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.104.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:369963633942:key/1cff0d32-3418-4671-896b-a97b43ed7b38",
                "tags_all": {
                  "terraforms": "true"
                },
                "throughput": 125,
                "volume_id": "vol-0644511152b193fa6",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "SGforProvisioners"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf20dd2bb23469cf",
            "tags": {
              "Name": "testingprovisioner",
              "another": "tag"
            },
            "tags_all": {
              "Name": "testingprovisioner",
              "another": "tag",
              "terraforms": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d2da1636a5e148a9"
            ]
          },
          "dependencies": [
            "aws_security_group.SGs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SGs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369963633942:security-group/sg-0d2da1636a5e148a9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d2da1636a5e148a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SGforProvisioners",
            "name_prefix": "",
            "owner_id": "369963633942",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "terraforms": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0727def0a72b58986"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sgrules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:369963633942:security-group-rule/sgr-0129ce244b647abca",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0129ce244b647abca",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d2da1636a5e148a9",
            "security_group_rule_id": "sgr-0129ce244b647abca",
            "tags": null,
            "tags_all": {
              "terraforms": "true"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SGs"
          ]
        }
      ]
    }
  ]
}